<resources>
    <string name="app_name">Tienda</string>
    <string name="tienda">Tienda</string>
    <string name="ver_productos">Ver productos</string>
    <string name="crear_producto">Crear producto</string>
    <string name="productos_m_s_costos">Productos más costos</string>
    <string name="productos_menos_costos">Productos menos costos</string>
    <string name="promedio_productos">Promedio productos</string>
    <string name="todo">TODO</string>
    <string name="registrar_productos">Registrar Productos</string>
    <string name="registrar">Registrar</string>
    <string name="todo2">TODO</string>
    <string name="productos_m_s_costosos">Productos más costosos</string>
    <string name="luui">luui</string>
    <string name="tvProducCostosos">TextView</string>
    <string name="productos_menos_costosos">Productos menos costosos</string>
    <string name="textviewl">TextView</string>
    <string name="productos">Productos</string>
    <string name="textview">TextView</string>
</resources>