<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1DCDF"
    tools:context=".MainActivity">

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/tvTitulo"
        android:layout_width="176dp"
        android:layout_height="47dp"
        android:layout_marginTop="30dp"
        android:text="@string/tienda"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="24sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ec.dina.btefonts.ButtonFonts
        android:id="@+id/btnVer"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#009688"
        android:text="@string/ver_productos"
        android:textColor="#FFFFFF"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrear" />

    <ec.dina.btefonts.ButtonFonts
        android:id="@+id/btnCrear"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#009688"
        android:text="@string/crear_producto"
        android:textColor="#FFFFFF"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:srcCompat="@drawable/carritos" />

    <ec.dina.btefonts.ButtonFonts
        android:id="@+id/btnCostos"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#009688"
        android:text="@string/productos_m_s_costos"
        android:textColor="#FFFFFF"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVer" />

    <ec.dina.btefonts.ButtonFonts
        android:id="@+id/btnMenos"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#009688"
        android:text="@string/productos_menos_costos"
        android:textColor="#FFFFFF"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCostos" />

    <ec.dina.btefonts.ButtonFonts
        android:id="@+id/btnPromedio"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#009688"
        android:text="@string/promedio_productos"
        android:textColor="#FFFFFF"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenos" />

</androidx.constraintlayout.widget.ConstraintLayout>